<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:text="@string/title_config"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/titleNameUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonUpdateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6750a4"
        android:onClick="updateUser"
        android:text="@string/button_update_user"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameUserConfig" />

    <TextView
        android:id="@+id/titleNameUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/title_name_user"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nameUserConfig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleConfig" />

    <EditText
        android:id="@+id/nameUserConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/numberCode"
        app:layout_constraintTop_toBottomOf="@+id/titleNameUser" />

    <TextView
        android:id="@+id/numberCode"
        android:layout_width="17dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:text="+7"
        app:layout_constraintBottom_toTopOf="@+id/buttonUpdateUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleNameUser"
        app:layout_constraintVertical_bias="0.193" />

</androidx.constraintlayout.widget.ConstraintLayout>
