<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleRegActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:text="@string/title_reg_activity"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/titlePhoneNumberText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"
        android:backgroundTint="#6750a4"
        android:onClick="save"
        android:text="@string/button_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberReg" />

    <TextView
        android:id="@+id/titlePhoneNumberText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/title_phone_number_reg"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegActivity" />

    <TextView
        android:id="@+id/numberCode"
        android:layout_width="24dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="+7"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePhoneNumberText" />

    <EditText
        android:id="@+id/phoneNumberReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/numberCode"
        app:layout_constraintTop_toBottomOf="@+id/titlePhoneNumberText" />

</androidx.constraintlayout.widget.ConstraintLayout>